basic section layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
-		<h1>critters</h1>
+		<section class="landing">
+			<h1>critters</h1>
+		</section>
+		<section class="landing menu">
+			<!-- <a href="">LINK</a> -->
+		</section>
 	</body>
 </html>
