--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		</section>
 		<section class="landing menu">
 			<!-- <a href="">LINK</a> -->
+			<a id="ladybug" class="menu-link" href=""><img src="./images/critter_10.png" alt="ladybug"></a>
+			<a id="butterfly" class="menu-link" href=""><img src="./images/critter_12.png" alt="butterfly"></a>
+			<a id="fly" class="menu-link" href=""><img src="./images/critter_14.png" alt="fly"></a>
 		</section>
 	</body>
 </html>
