--- a/agency/index.html
+++ b/agency/index.html
@@ -13,7 +13,8 @@
      }
 
      #spiderweb {
-       width: 100vh;
+       display: block;
+       width: 100vw;
        height: 100vh;
      }
     </style>
